added client side code for stretch

--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -31,8 +31,8 @@
     <table align="center">
     
         <tr>
-            <td colspan="3" id="input" ></td>
-            <td><button id="C">C</button></td>
+            <td colspan ="4"><div class="input"></div></td>
+           
         </tr>
         <tr>
             <td><button id="7">7</button></td>
@@ -54,7 +54,7 @@
         </tr>
         <tr>
             <td><button id="0">0</button></td>
-            <td><button id="dot">.</button></td>
+            <td><button id="C">C</button></td>
             <td><button id="equals">=</button></td>
             <td><button id="slash">/</button></td>
         </tr>
