worked on stretch

--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -59,8 +59,9 @@
             <td><button id="equalz">=</button></td>
             <td><button id="slash">/</button></td>
         </tr>
-    </table>
-
+       
+    </table><br>
+    <div class="calcOutput"></div>
         
 
 </body>
