--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="parent">
         <div class="child">
-            <h1>Server Side Calculator</h1>
+            <h1>Server Side Calculators</h1>
 
             <input type="text" id="firstValue">
             
