fixed folder structure

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="parent">
         <div class="child">
-            <h1>Server Side Calculators</h1>
+            <h1>Server Side Calculator</h1>
 
-            <input type="number" id="firstValue">
+            <!-- <input type="number" id="firstValue">
             
             <button class="operatorButton" class="button">+</button>
             <button class="operatorButton" class="button">-</button>
@@ -26,7 +26,7 @@
             <button id="clearButton" class="button">C</button>
 
             <p id="output"></p>
-     <br><br><br><br>
+     <br><br><br><br> -->
     </div>
     </div>
    <table align="center">
